# concurrency-downloader-rs

./: .gitignore  Cargo.toml  readme.md
examples/hanna/: cargo.toml
examples/hanna/src/: main.rs
hanna/: cargo.toml  hanna-out.json
hanna/src/: http_types.rs  main.rs
mass_downloader/: Cargo.toml  many.txt
mass_downloader/src/: main.rs
src/: lib.rs
