[package]
name = "concurrency_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
futures = "0.3.21"
bytes = "1.1.0"
# [[example]]
# name = "hanna"
[workspace]
members = [
    "hanna",
    "mass_downloader"
]